--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -51,7 +51,7 @@
         </div>
         <div class="form-group">
             <label for="inhoud">Inhoud</label>
-            <textarea style="width: 100%; resize: none; padding: 0px" name="inhoud" class="form-control" rows="20"
+            <textarea style="width: 100%; resize: none;" name="inhoud" class="form-control" rows="20"
                   placeholder="Inhoud"
                   maxlength="4000"></textarea>
         </div>
