--- a/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
@@ -67,7 +67,7 @@
       <p><label for="inhoud">Inhoud</label>
          
       
-      <textarea style="width: 100%; resize: none; padding: 0px" name="inhoud" class="form-control" rows="20"
+      <textarea style="width: 100%; resize: none;" name="inhoud" class="form-control" rows="20"
                   
                   maxlength="4000">@inhoud</textarea>
 
