--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -178,8 +178,13 @@
                     if (keuzeVakken[i] != -1)
                     {
                         <td>
-                    
                             <input type="number" name="aantalMensen_@i" min="1" max="3" value="1" class="form-control">
+                        </td>
+                    }
+                    else
+                    {
+                        <td hidden>
+                            <input type="hidden" name="aantalMensen_@i" value="1" class="form-control">
                         </td>
                     }
                 }
