--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿@* 
+    Permissies: Admin, Decaan
+    Te bereiken van: _Layout
+    Linkt door naar: Decaan/Mail/MailOverzicht, Decaan/Mail/MailBevestiging
+    Beschrijving: Weergeeft de te verzenden e-mail, de verzender heeft op deze pagina de optie om de onvangers te selecteren op relevante eigenschappen, op deze manier kan bijvoorbeeld een herinnerings mail verzend worden naar iedereen die zich nog niet aangemeld heeft.
+*@
+
+@{
     Layout = "~/_Layout.cshtml";
     
     var onderwerp = "";
