Mail verwijderen werkt

--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -45,6 +45,7 @@
         <tr>
             <td>@mail.Onderwerp</td>
             <td><a href="~/Decaan/Mail/MailWijzigen?MailId=@mail.MailId">Wijzig</a></td>
+            <td><a href="~/Decaan/Mail/MailVerwijderen?MailId=@mail.MailId">Verwijder</a></td>
             <td><a href="~/Decaan/Mail/MailVerzenden?MailId=@mail.MailId">Verzenden</a></td>
         </tr>
         }
