Aantal comments toegevoegd

--- a/ComeniusCarrousel/Decaan/Mail/MailVerwijderen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerwijderen.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te bereiken van: _Layout
+    Linkt door naar: Decaan/Mail/MailOverzicht
+    Beschrijving: Deze pagina is gemaakt om mails te kunnen verwijderen. Het idee was om deze pagina met MailWijzigen te combineren.
+*@
+
+@{
     
     Layout = "~/_Layout.cshtml";
 
