--- a/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
@@ -1,4 +1,12 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te bereiken van: _Layout
+    Linkt door naar: Decaan/Mail/MailOverzicht
+    Beschrijving: Deze pagina is gemaakt om mails te kunnen wijzigen, zowel het onderwerp als de inhoud. 
+    Het idee was om MailWijzigen in deze pagina te mergen.
+*@
+
+@{
     Layout = "~/_Layout.cshtml";
 
     
