--- a/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailWijzigen.cshtml
@@ -85,7 +85,8 @@
       <input type="hidden" name="mailid" value="@mailId" />
           </p>
 
-      <p><input type="submit" name="buttonSubmit" value="Mail Veranderingen opslaan" /></p>
+      <button type="submit" id="submit" name="buttonSubmit" class="btn btn-success" style="float: right;">
+            <span class="glyphicon glyphicon-plus"></span>&nbsp; Wijzigen
+        </button>
   </form>
-  <p><a href="~/Decaan/Mail/MailOverzicht.cshtml">Terug naar MailOverzicht</a></p>
 </body>
