--- a/ComeniusCarrousel/Decaan/Mail/MailBevestiging.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailBevestiging.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    Layout = "~/_Layout.cshtml";    
+    Layout = "~/_Layout.cshtml";
+    Page.Title = "E-Mail bevestiging";    
 
     var customerName = Request["onderwerp"];
     var customerEmail = Request["ontvanger"]; 
