--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -7,7 +7,7 @@
 
 @{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Mail verzenden";
+    Page.Title = "E-Mail verzenden";
 
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
