--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -8,6 +8,7 @@
 @{
    int id = WebSecurity.CurrentUserId;
    List<LeerlingRepo.Leerling> leerlingen = LeerlingRepo.GetLeerlingen();
+   Page.Title = "Home";
 }
 <h2>Leerlingenoverzicht</h2>
 
