--- a/ComeniusCarrousel/Decaan/Mail/MailVerwijderen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerwijderen.cshtml
@@ -9,6 +9,8 @@
     
     Layout = "~/_Layout.cshtml";
 
+    Page.Title = "E-Mail verwijderen";
+
     
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
